--- a/Nhap/Form1.resx
+++ b/Nhap/Form1.resx
@@ -126,4 +126,81 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANAAAAQAAAACEAAAAGAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD0AAACKAAAAcQAA
+        AHgAAABdAAAAMgAAABAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAAAAAAZwAA
+        ADMAAAABAAAAGQAAAEAAAABoAAAAfAAAAG4AAABHAAAAHAAAAAUAAAAAAAAAAAAAAAEAAAACAAAAAgAA
+        AAIAAAACAAAAAgAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABWAAAAeAAA
+        AHcAAAC0AAAAfQAAAHEAAABxAAAAbwAAAHAAAAB+AAAAngAAAMEAAACwAAAAhwAAAI8AAACXAAAAgAAA
+        AHEAAABvAAAAcQAAAHIAAAByAAAAeAAAAFYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAA
+        AHcAAAAzAAAAQwAAAHoAAAAaAAAAHAAAABwAAAAcAAAAHAAAABsAAAAZAAAAGAAAABoAAAAhAAAARwAA
+        AH8AAACWAAAAhQAAAF4AAAA2AAAAHwAAABcAAAAzAAAAdwAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAACAAAAcgAAABgAAABTAAAARgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAwAAAAtAAAAWAAAAHUAAABzAAAAUgAAAEQAAAB3AAAAAgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAIAAAByAAAAHwAAAHMAAAAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABQAAAB4AAABFAAAAewAAALUAAABnAAAAPAAA
+        AAwAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAHEAAAA3AAAAdQAAAAUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AA8AAAAeAAAADgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcAAAAfQAA
+        ADMAAACKAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAbwAAAF4AAABYAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAA2AAAAsgAAAM0AAAC1AAAAYwAAAAsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABwAAAByAAAABAAAAHIAAAAhAAAAAAAAAAAAAAAAAAAAAAAAAAIAAABxAAAAhQAAAC4AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAIQAAADtAAAA6AAAAOkAAADkAAAAdgAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAHAAAAHEAAAAaAAAAeAAAAAYAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAIAAAACWAAAADQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAVwAAAOIAAADoAAAA5gAAAOkAAADJAAAAGgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAcAAAAbwAAAEAAAABdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlwAA
+        AH8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJAAAAcwAAANIAAADmAAAA5gAAANIAAAAjAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABwAAABwAAAAaAAAADMAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAACQAAAASAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAKwAAAFgAAABUAAAAiAAA
+        ACUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGwAAAH4AAAB8AAAAEAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAABQAAAIcAAAAhAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABxAAAAJgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZAAAAngAAAG4AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAdAAAAsAAAABoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAHEAAAAmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgAAADBAAAARwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEcAAADBAAAAGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAcQAAACYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGgAA
+        ALAAAAAdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbgAAAJ4AAAAZAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABxAAAAJgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAhAAAAhwAAAAUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAB8AAAAfgAAABsAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHEAAAAmAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAEgAAACPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMwAAAGgAAABxAAAAHAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcQAAACYAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAfwAAAJcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABdAAAAQAAA
+        AG8AAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABxAAAAJgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA0AAACWAAAAgAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAABgAA
+        AHgAAAAaAAAAcQAAABwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AHEAAAAmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALgAAAIUAAABxAAAAAgAAAAAAAAAAAAAAAAAA
+        AAAAAAAhAAAAcgAAAAQAAAByAAAAHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAcQAAACYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABYAAAAXgAAAG8AAAACAAAAAAAA
+        AAAAAAAAAAAAAAAAAEAAAACKAAAAMgAAAH0AAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABxAAAAJwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABQAAAHUAAAA3AAAAcQAA
+        AAIAAAAAAAAAAAAAAAAAAAAAAAAADAAAADwAAABnAAAAtQAAAHoAAABFAAAAHgAAAAUAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGMAAAAiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAAAAcwAA
+        AB8AAAByAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAB3AAAARAAAAFMAAABzAAAAdQAA
+        AFcAAAAtAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AEYAAABTAAAAGAAAAHIAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAHcAAAAzAAAAFwAA
+        AB8AAAA2AAAAXgAAAIUAAACWAAAAfwAAAEcAAAAgAAAAGQAAABgAAAAYAAAAGwAAABwAAAAcAAAAHAAA
+        ABwAAAAaAAAAeQAAAEMAAAAzAAAAdwAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVwAA
+        AHgAAAByAAAAcgAAAHEAAABvAAAAcQAAAIAAAACXAAAAjwAAAIcAAACwAAAAwQAAAJ4AAAB+AAAAcAAA
+        AG8AAABxAAAAcQAAAH0AAAC0AAAAdwAAAHgAAABXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAgAAAAIAAAACAAAAAgAAAAIAAAACAAAAAQAAAAAAAAAAAAAABQAAABwAAABHAAAAbgAA
+        AHwAAABoAAAAQAAAABkAAAABAAAAMwAAAGcAAAAAAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAABAAAAEAAAADMAAABdAAAAeAAAAHAAAACJAAAAPQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGAAAAIQAAAEAAAAANAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//////4f///+Af//+gAwH/AAAA/gAAAH4P/wB+D//gHg+P/B4fA/weHw
+        H8Hh8B/D8/Afw/P4H8Pj/5/H4/+fx+P/n8fj/5/Hw/+fz8P/n8/D/5+Hg/+fh4P/n4eD/58HgH+fB+AP
+        nwfgAAAH8AAAD/gMAF///4B////4f/////8=
+</value>
+  </data>
 </root>
